--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,3 +1,8 @@
-<div class ="contents row">
-  <p><%= @tweet.text %> </p>
-</div>
+  <div class="contents row" >
+    <% @tweets.each do |tweet| %>
+      <div class="content_post" style="background-image: url(<%= tweet.image %>);">
+        <%= simple_format(tweet.text) %>
+        <span class="name"><%= tweet.name %></span>
+      </div>
+    <% end %>
+  </div>
